# tgf.c

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.toml.example  nob.c
include/: config.h  handlers.h  network.h  storage.h  utils.h
src/: config.c  config.rs  handlers.c  main.c  main.rs  network.c  storage.c  storage.rs  td_client.rs  utils.c  utils.rs
src/handlers/: auth.rs  message.rs  mod.rs
