[package]
name = "tgf-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
anyhow = "1.0"
libc = "0.2"
futures-util = "0.3"
